# stelline

./: meson.build
examples/: fbh5-reader.yml
include/stelline/: config.hh.in
include/stelline/fbh5_reader/: block.hh  module.hh
include/stelline/operators/filesystem/: base.hh
include/stelline/uvh5_reader/: block.hh  module.hh
meson/loaders/hdf5/: meson.build
python/stelline/bits/: filesystem.py
python/stelline/operators/: __init__.py
resources/frbnn/model/: meson.build  patch_preprocessor.py
src/bindings/operators/: filesystem_ops.cc
src/fs/: meson.build
src/fs/fbh5_reader/: block_impl.cc  module_impl.cc  module_impl.hh  module_impl_native_cpu.cc
src/fs/uvh5_reader/: block_impl.cc  module_impl.cc  module_impl.hh  module_impl_native_cpu.cc
src/operators/filesystem/: dummy_writer.cc  fbh5_reader.cc  fbh5_writer_rdma.cc  meson.build  uvh5_reader.cc
src/operators/filesystem/utils/: helpers.hh
subprojects/: filterbankc99.wrap  uvh5c99.wrap
tests/: fbh5_compat_test.cc  meson.build
