project(
    'stelline',
    ['cpp', 'cuda'],
    version: '0.2.0',
    default_options: [
        'cpp_std=c++20',
        'buildtype=release',
        'b_ndebug=if-release',
        'cuda_std=c++20',
    ]
)

cuda = meson.get_compiler('cuda')
is_static = get_option('default_library') == 'static'
cdn_url = 'https://stelline.cdn.luigi.ltd/0.0.1/'

cfg_lst = configuration_data({
    'version': meson.project_version(),
    'build_type': get_option('buildtype'),
})
src_lst = []
cuda_lst = []
dep_lst = [
    dependency('cuda', version: '>=11', modules: ['cuda', 'culibos', 'cufile']),
]
inc_lst = [
    include_directories('include'),
]

subdir('meson')
subdir('src')
subdir('resources')
subdir('include')
subdir('tests')

lib_stelline = library(
    'stelline',
    src_lst,
    include_directories: inc_lst,
    dependencies: dep_lst,
    link_with: static_library(
        'stelline_device',
        sources: cuda_lst,
        include_directories: inc_lst,
        cuda_args: [
            '-Xcompiler=-fPIC',
            '--expt-relaxed-constexpr',
            '-arch', 'compute_80',
            '-diag-suppress', '815'
        ],
    ),
    gnu_symbol_visibility: 'hidden',
    install: not is_static,
)

lib_stelline_dep = declare_dependency(
    include_directories: inc_lst,
    dependencies: dep_lst,
    link_with: lib_stelline,
)

if not is_static
    pkg = import('pkgconfig')
    pkg.generate(
        lib_stelline,
        libraries: dep_lst,
    )
endif

subdir('python')
